# trade-engine

./: .env.template  .gitignore  README.md  RELEASE.md  main.py  pyproject.toml  requirements.txt  trade_engine.spec
.github/workflows/: ci.yml  release.yml
build_scripts/: build_exe.bat  build_exe.sh  build_package.bat  build_package.sh
data/artifacts/processed/: EQ.csv
data/artifacts/raw/: EQ.csv  IDX.csv
research/notebooks/: artifact_creation.ipynb  vector_db_storing_eq.ipynb
scripts/: check_staged_secrets.py  install_git_hooks.py
src/trade_engine/brokers/: __init__.py  base_broker.py  broker_factory.py  data_only_broker.py  groww_broker.py  sdk_manager.py  upstox_broker.py  zerodha_broker.py
src/trade_engine/cli/: ai_advisor_menu.py  app.py  interface.py  settings_menu.py  strategy_menu.py  visualization_menu.py
src/trade_engine/config/: broker_config.py  groww_config.py  llm_config.py  market_universe.py  openai_config.py  pinecone_config.py  settings_store.py  strategy_config.py  trading_config.py  visualization_config.py
src/trade_engine/core/: event_bus.py  live_trading_console.py  llm_factory.py  market_data_service.py  portfolio_chatbot.py  stock_advisor.py  stock_visualizer.py  strategy_builder.py  vector_db_search.py
src/trade_engine/engine/: __init__.py  execution_router.py  observability.py  order_journal.py  portfolio_rebalancer.py  position_sizer.py  recommendation_engine.py  risk_engine.py  session_state_store.py  strategy_leaderboard.py  walk_forward.py
src/trade_engine/exception/: exception.py
src/trade_engine/web/: __init__.py  (+1 more)
tests/: conftest.py  test_backtester_costs.py  test_broker_factory_settings.py  test_event_bus.py  test_execution_router.py  test_order_journal.py  test_portfolio_rebalancer.py  test_position_sizer.py  test_risk_engine.py  test_strategy_leaderboard.py  test_walk_forward.py
(+17 files in other folders)
